# svc-auth

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  caddy.fragment  compose.fragment.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: cli.py  config.py  db.py  google.py  mail.py  main.py  passwords.py  routes_api.py  routes_password.py  routes_telegram.py  security.py
app/templates/: _card_base.html  admin.html  forgot_password.html  forgot_password_sent.html  login.html  set_password.html  telegram_link_result.html  token_invalid.html
